# From-Cracked-Accounts-to-Fake-IDs

./: .gitignore  README.md  all_metrics.json  data.dvc  data.tar.xz  dvc.yaml  env.yml  pyproject.toml
.dvc/: config
data_inspection/: data_inspection.ipynb
dvc_plots/: index.html
emb/: .gitignore
emb/train/: .gitignore
evaluation/: .gitignore
finetuned_twitter_model/: .gitignore
iaa_clustering/: all_product.txt  clustering_andre.jsonl  clustering_lars.jsonl  clustering_phil.jsonl  script.py
iaa_clustering/clustering_andre/: accounts.txt  cigarettes.txt  documents.txt  drugs_medication.txt  electronics.txt  fashion.txt  other.txt  social_media_services.txt  software.txt  watches.txt
iaa_clustering/clustering_lars/: accounts.txt  cigarettes.txt  documents.txt  drugs_medication.txt  electronics.txt  fashion.txt  other.txt  social_media_services.txt  software.txt  watches.txt
iaa_clustering/clustering_phil/: accounts.txt  cigarettes.txt  documents.txt  drugs_medication.txt  electronics.txt  fashion.txt  other.txt  social_media_services.txt  software.txt  watches.txt
language_model/backward/: .gitignore
metadata_analysis_results/: .gitignore
pictures and graphics/: .gitignore  Pipeline visualization.vsdx  classic_model_architecture.drawio  message-example.pptx  relation_model_architecture.drawio  transformer_model_architecture.drawio
profile_extraction/evaluation/: corpus_eval.py  evaluate_embeddings.py  evaluate_nn_algorithm.py  util.py
profile_extraction/metadata_analysis/: box_plot_streamining_offers.py  create_relation_based_product_offerings.py  hist_constr_type.py  main.py  plot_product_price_ranges.py  plot_user_activity.py  price_per_month_and_length_of_crit.py  util.py
profile_extraction/ner_model/: corpus.py  evaluate.py  train.py  train_embeddings.py  train_fasttext.py  train_transformer.py
profile_extraction/profile_clustering/: cluster.py  embedding.py  main.py  tfidf.py
profile_extraction/profile_creation/: main.py  profile.py  reader.py
profile_extraction/profile_creation/chat/: chat.py  message.py  user.py
profile_extraction/profile_creation/extraction/: extractors.py  profile_extractor.py  util.py
profile_extraction/profile_visualization/: main.py  profilevis.py
profile_extraction/rel_model/: main.py  train.py
profile_extraction/rule_based_pipeline/: create_pattern_file.py  rule_based_pipeline.py  spacy_corpus.py
profile_extraction/util/: main.py  split_data_by_labels.py  utils.py
profiles/: .gitignore
relation_model/: .gitignore
rule_based_pipeline_resources/: .gitignore  config.cfg
tests/: test_corpus.py  test_utils.py
tests/resources/: test_dataset.jsonl
tests/resources/test_corpus/: dev.jsonl  test.jsonl  train.jsonl
tmp/: .gitignore
visualized_profiles/: .gitignore
